--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.15",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -19,5 +20,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "styled-components": "^5.3.3"
+  }
 }
