--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit ",
     "start": "webpack serve",
+    "start-api": "json-server --watch ./api/db.json --middlewares ./api/middlewares",
     "build": "webpack",
     "tsc": "tsc",
     "format": "prettier --write \"./src/**/*.{ts,tsx}\""
@@ -11,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
     "html-webpack-plugin": "^5.5.0",
+    "json-server": "^0.17.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
