--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,11 @@
   "recommendations": [
     // Prettier をフォーマッターとして使う
     "esbenp.prettier-vscode"
+
+    // ESLint の警告をリアルタイムで表示する
+    "dbaeumer.vscode-eslint",
+
+    // styled-components のシンタックスハイライトを有効にする
+    "jpoissonnier.vscode-styled-components"
   ]
 }
